--- a/demo/css/info.ini
+++ b/demo/css/info.ini
@@ -1,5 +1,5 @@
 author = "MisterZik"
 github = "https://github.com/Insanen/Gridzy"
 homepage = "https://github.com/Insanen/Gridzy"
-description = "Grid like a bear with Gridzy."
+description = "Grid it like a bear with Gridzy."
 mainfile = "gridzy.min.css"
